Fix Overflow for Small Screens

--- a/css/recent-messages.styl
+++ b/css/recent-messages.styl
@@ -45,7 +45,9 @@
     width: 2em
 
   &__preview
-    margin: 0 0.5ch;
+    margin: 0 0.5ch
+    overflow: hidden
+    white-space: nowrap
 
   &__title
     font-size: 1.2em
